fixed header alignment
fixed header alignment..."innovation on demand" no longer relies on line-height for vertical centering

minor problem: code snippet image is now squashed and appears as an oval. = (

--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -86,15 +86,13 @@ header {
 }
 .nonce-class{
 	width: 370px;
+	height: 200px;
 	display: inline-block;
 	text-align: center;
 }
 
-
-
 h1 {
 	font-size: 50px;
-	line-height: 100px;
 	display: inline-block;
 }
 
